<resources>
    <string name="app_name">MyToDo</string>
    <string name="important_task">Important task</string>
    <string name="task_name">Task name</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_sort">Sort</string>
    <string name="menu_item_sort_by_name">Sort by name</string>
    <string name="menu_item_sort_by_date_created">Sort by date created</string>
    <string name="menu_item_hide_completed">Hide Completed</string>
    <string name="menu_item_delete_all_completed">Delete all completed</string>
</resources>