<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_item_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:title="@string/menu_item_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/menu_item_sort_by_name"/>

            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/menu_item_sort_by_date_created"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_hide_completed_tasks"
        android:title="@string/menu_item_hide_completed"
        android:checkable="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_all_completed_tasks"
        android:title="@string/menu_item_delete_all_completed"
        app:showAsAction="never"/>

</menu>